fix(EIDOMNI-185) : fix pr findings